Need help fixing text align in artists page

--- a/css/about.css
+++ b/css/about.css
@@ -7,7 +7,7 @@ a { color: inherit; }
 
 
 #header{
-	height: 130px;
+	height: 80px;
 	width: 100%;
 	
 	}
